[gd_scene load_steps=9 format=2]

[ext_resource path="res://textures/1floor/main_corridor.png" type="Texture" id=1]
[ext_resource path="res://scenes/characters/main_character.tscn" type="PackedScene" id=2]
[ext_resource path="res://scripts/1floor/main_secret.gd" type="Script" id=3]
[ext_resource path="res://addons/JitterFreePixelArt.shader" type="Shader" id=4]


[sub_resource type="ShaderMaterial" id=1]
shader = ExtResource( 4 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 1.80092, 12.7623 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 21.5148, 0.798462 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 2.11613, 12.0669 )

[node name="main_secret" type="Node"]
script = ExtResource( 3 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = -3638.83
margin_top = -1807.07
margin_right = 3112.17
margin_bottom = 2469.93
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="."]
material = SubResource( 1 )
position = Vector2( 63.0303, 169.832 )
texture = ExtResource( 1 )

[node name="StaticBody2D" type="StaticBody2D" parent="Sprite"]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Sprite/StaticBody2D"]
polygon = PoolVector2Array( -23.3965, -118.477, 23.4471, -118.477, 23.2057, -89.6552, 29.3157, -89.5238, 29.4471, -63.7699, 23.4685, -63.5728, 23.2057, 150.54, -23.6376, 150.277, -23.5719, -64.4268, -29.4191, -64.4925, -29.2877, -89.5238, -23.7033, -89.7209, -23.5062, -121.716, -125.63, -50.1216, -18.558, 223.236, 212.62, 89.3961, 18.7549, -230.197, -23.0772, -130.039 )

[node name="player" parent="." instance=ExtResource( 2 )]
position = Vector2( 65.0978, 281.639 )

[node name="cabinet" type="Area2D" parent="."]
position = Vector2( 85.8171, 92.7378 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="cabinet"]
position = Vector2( 2.36625, 0.383095 )
shape = SubResource( 2 )

[node name="main_hall" type="Area2D" parent="."]
position = Vector2( 63.6708, 309.126 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="main_hall"]
position = Vector2( -0.513718, 8.89645 )
shape = SubResource( 3 )

[node name="family_dine" type="Area2D" parent="."]
position = Vector2( 46.5996, 96.4289 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="family_dine"]
position = Vector2( -9.47136, -3.69615 )
shape = SubResource( 4 )
[connection signal="body_entered" from="cabinet" to="." method="_on_cabinet_body_entered"]
[connection signal="body_entered" from="main_hall" to="." method="_on_main_hall_body_entered"]
[connection signal="body_entered" from="family_dine" to="." method="_on_family_dine_body_entered"]
